--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -154,12 +154,72 @@
       <% @class.reservations.where(date: @date).each do |c| %>
           <tr>
             <td><%=c.id%></td>
-            <td><%=c.user%></td>
+            <td><%=User.find(c.user).email %></td>
             <td><%=c.date%></td>
             <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
             
-            <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>" id = "good">예약 대기</button></td>
-            <td><button class="btn btn-primary btn-sm" data_toggle="modal" data-target="" id = "bad" >예약 취소</button></td>
+            <td>
+              <% if current_user %> <!--로그인 된 상태.-->
+                      
+                <%  if current_user.email == "admin@ptu.ac.kr" %> <!--관리자일때 승인하기-->
+                  <span class="label label-info" id="view_state<%c.id%>"><%=c.state%></span>
+                  
+                  <% if c.state=="승인대기" %>
+                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()" >승인하기</button>
+                  <% else %>
+                    <button type="button" class="btn btn-primary btn-sm" id="button<%=c.id%>" onclick="change()">승인취소</button>
+                  <!--<input class="btn btn-primary btn-sm" onclick="change()" value="승인하기" id="<=c.id%>"></input>-->
+                  <%end%>
+                                
+                <% else %> <!--관리자가 아닐때 승인대기-->
+                  <span class="label label-info"><%=c.state%></span><!--관리자가 아닐땐 상태만 보여준다-->
+                  <!--<input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>-->
+                            
+                <% end %>
+                      
+              <% else %> <!--로그인 안된 상태에서는 로그인창으로 이동-->
+                <% redirect_to "/users/sign_in" %>
+              <% end %>
+                    
+<script>
+   function change(){                             
+// $(function() {  
+                                	     
+  // $("#button%=c.id%>").click(function change(){                 
+
+    var view_state = document.getElementById("view_state<%=c.id%>");
+    var button = document.getElementById("button<%=c.id%>");
+    alert("view_state<%=c.id%>  ;  button<%=c.id%>"  );
+      <% if c.state == "승인대기" %> 
+      // 승인대기상태라면 버튼눌렀을때 승인완료로 바뀜
+        <% @state_change=Reservation.find(c.id)
+           @state_change.state="승인완료"
+           @state_change.save %> //db에 저장
+           
+           view_state.innerHTML="<%=c.state%>"; //상태표시를 바꿔줌
+           button.innerHTML="승인취소"; //버튼의값을 일시적으로 바꿔줌
+           
+      <% else %>//승인취소시
+        <% @state_change=Reservation.find(c.id)
+           @state_change.state="승인대기"
+           @state_change.save %> //db에 저장
+           
+           view_state.innerHTML="<%=c.state%>"; //상태표시를 바꿔줌
+           button.innerHTML="승인하기"; //버튼의값을 일시적으로 바꿔줌
+      <%end%>
+  // });
+};
+</script>
+                 </td>
+               
+            <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
+            
+             <% if User.find(c.user).email == current_user.email %>
+              <!--예약취소는 사용자만 가능하게! 관리자가 안된다고 생각하면 삭제 말고 승인 거부하면된다-->
+              <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button></td>
+        
+            <%end%>
+            
           </tr>
 
       <% end %>
@@ -168,33 +228,34 @@
 </div>
 
 
-<% @class.reservations.where(date: @date).each do |c| %>
+<% @class.reservations.where(date: @date).each do |c| %><!--예약취소 모달-->
 
-<!--<div id=" #data-target <2%=c.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">-->
-<!--  <div class="modal-dialog">-->
-<!--    <div class="modal-content">-->
-<!--      <div class="modal-header">-->
-<!--        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
-<!--        <h4 class="modal-title" id="exampleModalLabel">예약 취소</h4>-->
-<!--      </div>-->
-<!--      <div class="modal-body">-->
-        <!--<div class="form-group">-->
-        <!--  <label for="recipient-name" class="control-label">예약을 취소하시겠습니까?</label>-->
-        <!--</div>-->
-<!--        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>-->
-            <!--<form>-->
-              
+<div id="show_check<%=c.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="exampleModalLabel">예약 취소</h4>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label for="recipient-name" class="control-label">예약을 취소하시겠습니까?</label>
+        </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <form action="/book/delete/<%=c.id%>" method="POST">
+              <button type="submit" class="btn btn-primary">취소하기</button>
             </form>
-<!--        <button type="submit" class="btn btn-primary" id = "#" >취소하기</button>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-<div class="modal-footer">
+
       
           
-<div id="show<%=c.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+<div id="show<%=c.id%>" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"><!--예약상세보기-->
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -227,29 +288,13 @@
       
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-       
-      
-       <script>
-      
-           $(function(){
-               $("#ok").click(function () {
-                    $("#good").text(function(text){
-                        return text = "승인완료";
-                        
-                        // 저장
-                    })
-               });
-            })
-
-        </script>
-
-
-
-
-        <button type="button"  ng-click="save()" class="btn btn-primary" id = "ok" >승인하기</button>
+        <!--<button type="button" class="btn btn-primary" id = "ok" >승인하기</button>-->
 
       </div>
     </div>
   </div>
 </div>
 <%end%>
+
+</div>
+</div>
