--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
                           <a id="11" class="page-scroll" href="/book/main" style="margin-top: 17px; font-size:20px;">예약하기</a>
                       </li>
                       <li>
-                          <a id="11" class="page-scroll" href="#" style="margin-top: 17px; font-size:20px;">예약현황(X)</a>
+                          <a id="condition" class="page-scroll" href="/book/condition" style="margin-top: 17px; font-size:20px;">예약현황(X)</a>
                       </li>   
                       <li class="page-scroll">
                           <% if current_page?(controller: 'book', action: 'real_main') %>        
@@ -139,9 +139,7 @@
 </html>
 
 
-
-
-
+<!--좋아 좋아 잘하고있어 아주 만족스럽다 -->
 
 
 
