--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -142,7 +142,7 @@
   <table class="table table-striped table-hover ">
     <thead>
       <tr class="info">
-        <th>#</th>
+        
         <th>사용자 이름</th>
         <th>사용날짜</th>
         <th>사용시간</th>
@@ -151,9 +151,9 @@
       </tr>
     </thead>
     <tbody>
-      <% @class.reservations.where(date: @date).each do |c| %>
+      <% @class.reservations.where(date: @date).order(:start_time)each do |c| %>
           <tr>
-            <td><%=c.id%></td>
+           
             <td><%=User.find(c.user).email %></td>
             <td><%=c.date%></td>
             <td><%=c.start_time.to_s(:db)%> ~ <%=c.finish_time.to_s(:db)%></td>
@@ -217,7 +217,8 @@
              <% if User.find(c.user).email == current_user.email %>
               <!--예약취소는 사용자만 가능하게! 관리자가 안된다고 생각하면 삭제 말고 승인 거부하면된다-->
               <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button></td>
-        
+             <% else %>
+               <% redirect_to "/users/sign_in" %>
             <%end%>
             
           </tr>
