--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
-
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
-
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+    <p>안녕하세요, <%= @resource.email %> 님!</p>
+    
+    <p>누군가가 당신의 비밀번호 변경을 위한 링크를 요청했습니다.. 당신은 아래의 링크를 통해 비밀번호 변경을 하실 수 있습니다..</p>
+    
+    <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+    
+    <p>만약 당신이 요청하지 않은 경우, 이 이메일을 무시하십시오.</p>
+    
+    <p> 귀하의 암호는 암호를 새로 생성하거나 위의 링크를 액세스하기 전까지는 변경되지 않을 것입니다. </p>
+  
