--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Forgot your password?</h2>
+<center>
+
+<h2>비밀번호를 잊어버리셨나요?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -9,8 +11,10 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "새로운 비밀번호 설정을 위한 메일을 설정해주세요." %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</center>
