--- a/app/views/book/booking.erb
+++ b/app/views/book/booking.erb
@@ -67,7 +67,7 @@
       
       <div class="form-group">
         <div class="col-lg-10 col-lg-offset-2">
-          <a href="/book/view_booking/<%=@class.id%>&date=<%=@date%>"><button type="reset" class="btn btn-default">Cancel</button></a>
+          <a href="/book/view_booking/<%=@class.id%>&show_date=<%=@date%>"><button type="submit" class="btn btn-default">Cancel</button></a>
           <button type="submit" class="btn btn-primary" id="suc">작성 완료</button>
         </div>
       </div>
