--- a/app/views/book/real_main.erb
+++ b/app/views/book/real_main.erb
@@ -119,7 +119,7 @@
           <div class="row">
             <div class="full">
               <h1 class="text-center" id="menu_font" style="font-size:30px">공지사항
-              <a href = "/posts" style = "color:black">
+              <a href = "/freeboard/freeboards" style = "color:black">
                   <p class="glyphicon glyphicon-list-alt" aria-hidden="true" style="font-size:30px; top: 5px;"></p>
               </a>
                 </h1><br><br>
@@ -278,9 +278,15 @@
 
 
 
-<% if @mode == "false" %>
-  <script>
-    alert("관리자가 아닙니다");
+<% if params[:mode] == "false" %>
+   <script>
+    alert("관리자가 아닙니다.");
   </script>
-    
+  
+<% elsif params[:mode] == "blank" %>
+   <script>
+    alert("로그인이 필요합니다.");
+  </script>
+  
 <% end %>
+
