--- a/app/views/book/view_booking.erb
+++ b/app/views/book/view_booking.erb
@@ -1,20 +1,8 @@
-<!--<2% if @save_result == true %>-->
-<!--  <script>-->
-<!--    alert("예약되었습니다");-->
-<!--  </script>-->
-  
-<!--<2% else %>-->
-<!--  <script>-->
-<!--    alert("지정한 시간에는 이미 예약이 있습니다.");-->
-<!--  </script>-->
-  
-<!--<2% end %>-->
-
-
-
+<div class="containter"> <!--지우면 footer 위로 올라오니까 놔두세
+<div class="row">
 
 <div class="well">
-  <center><strong><%=@date.to_date.year%>년 <%=@date.to_date.month%>월 <%=@date.to_date.day%>일의 <%=@class.room_number%>호</strong>에 대한 예약현황입니다.</center>
+  <center><strong><%=@date.to_date.year%>년 <%=@date.to_date.month%>월 <%=@date.to_date.day%>일의 <%=@class.building_name%> <%=@class.room_number%>호</strong>에 대한 예약현황입니다.</center>
   <center><a href="/book/booking/<%=@class.id%>&date=<%=@date%>" class="btn btn-warning">예약하기</a></center>
 </div>
 
@@ -151,7 +139,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @class.reservations.where(date: @date).order(:start_time)each do |c| %>
+      <% @class.reservations.where(date: @date).order(:start_time).each do |c| %>
           <tr>
            
             <td><%=User.find(c.user).email %></td>
@@ -176,10 +164,8 @@
                   <!--<input class="btn btn-primary btn-sm" value="승인대기" id="<=c.id%>"></input>-->
                             
                 <% end %>
-                      
-              <% else %> <!--로그인 안된 상태에서는 로그인창으로 이동-->
-                <% redirect_to "/users/sign_in" %>
-              <% end %>
+                                 
+              <% end %> <!-- if current_user end -->
                     
 <script>
    function change(){                             
@@ -214,12 +200,16 @@
                
             <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show<%=c.id%>">상세보기</button></td>
             
-             <% if User.find(c.user).email == current_user.email %>
-              <!--예약취소는 사용자만 가능하게! 관리자가 안된다고 생각하면 삭제 말고 승인 거부하면된다-->
-              <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button></td>
-             <% else %>
-               <% redirect_to "/users/sign_in" %>
-            <%end%>
+            <% if current_user %>
+               <% if User.find(c.user).email == current_user.email %>
+                <!--예약취소는 사용자만 가능하게! 관리자가 안된다고 생각하면 삭제 말고 승인 거부하면된다-->
+                <td><button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#show_check<%=c.id%>" >예약 취소</button></td>
+               <% else %>
+                 
+               <%end%>
+            <% else %>
+            
+            <% end %>
             
           </tr>
 
