--- a/app/views/freeboard/freeboards.erb
+++ b/app/views/freeboard/freeboards.erb
@@ -62,7 +62,7 @@
   <!--<div class="container">-->
      <div class="jumbotron" style="width:600px height:600px">
       <form id="form1">
-        <table class="table table-condensed" id="table" style="padding-top:1px; padding-bottom:1px; background:rgba(40,40,40,0.7); align:center">
+        <table class="table table-condensed" id="table" style="padding-top:1px; padding-bottom:1px; background:rgba(0,0,0,0); align:center">
         
           <tr>
             <th style="text-align: center">Num </th>
@@ -98,7 +98,7 @@
                               $("#dialog").dialog({
                                   title: "알림",
                               
-                                  width: 300,               //dialog size
+                                  width: 300,               //dialog
                                   height: 200,
                                   modal: true,
                                   buttons: {
